--- a/app/src/main/res/layout/fav_rv.xml
+++ b/app/src/main/res/layout/fav_rv.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="@color/colorAccent"
            >
 
             <ImageView
@@ -25,39 +26,76 @@
                 app:srcCompat="@drawable/images" />
 
             <LinearLayout
+                android:layout_width="15dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="16dp"
+                android:orientation="vertical">
+
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="15dp"
+                    android:layout_height="16dp"
+                    android:layout_marginTop="2dp"
+                    app:srcCompat="@drawable/price" />
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="15dp"
+                    android:layout_height="16dp"
+                    android:layout_marginTop="4dp"
+                    app:srcCompat="@drawable/home_address" />
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="15dp"
+                    android:layout_height="16dp"
+                    android:layout_marginTop="2dp"
+                    app:srcCompat="@drawable/room" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="15dp"
+                    android:layout_height="16dp"
+                    android:layout_marginTop="3dp"
+                    app:srcCompat="@drawable/floor" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="4dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="PRICE"
-                    android:textColor="@color/colorPrimary" />
+                    android:text="Price"
+                    android:textColor="@color/cardview_light_background" />
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="DISTRICT"
-                    android:textColor="@color/colorPrimary" />
+                    android:text="District"
+                    android:textColor="@color/cardview_light_background" />
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ROOMS"
-                    android:textColor="@color/colorPrimary" />
+                    android:text="Rooms"
+                    android:textColor="@color/cardview_light_background" />
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="FLOOR"
-                    android:textColor="@color/colorPrimary" />
+                    android:text="Floor"
+                    android:textColor="@color/cardview_light_background" />
             </LinearLayout>
 
             <LinearLayout
@@ -72,21 +110,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="90000$"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/cardview_light_background" />
 
                 <TextView
                     android:id="@+id/fav_district"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Davitashen"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/cardview_light_background" />
 
                 <TextView
                     android:id="@+id/fav_rooms"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="3"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/cardview_light_background" />
 
                 <TextView
                     android:id="@+id/fav_floor"
@@ -94,7 +132,7 @@
                     android:layout_height="wrap_content"
                     android:text="12"
 
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/cardview_light_background" />
 
             </LinearLayout>
 
