--- a/app/src/main/res/layout/fragment_user_main_home.xml
+++ b/app/src/main/res/layout/fragment_user_main_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_alignParentTop="true"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/colapse"
         android:orientation="vertical">
 
         <ImageView
@@ -98,6 +98,7 @@
 
 
         <android.support.design.widget.FloatingActionButton
+
             android:id="@+id/add_statement_button"
             android:layout_width="60dp"
             android:layout_height="60dp"
