--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.ImageActivity"
-    android:background="@android:color/black">
+>
 
 <android.support.v7.widget.RecyclerView
 
     android:id="@+id/image_recycler"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/colapse_vert">
 
 
 </android.support.v7.widget.RecyclerView>
