--- a/app/src/main/res/layout/activity_statement_info.xml
+++ b/app/src/main/res/layout/activity_statement_info.xml
@@ -25,15 +25,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:background="@drawable/colapse"
-                android:scaleType="centerCrop"/>
+/>
 
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="No Photo"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+                />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
