--- a/app/src/main/res/layout/fragment_user_main_home.xml
+++ b/app/src/main/res/layout/fragment_user_main_home.xml
@@ -15,13 +15,13 @@
         android:background="@drawable/colapse"
         android:orientation="vertical">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_profie_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/avatar_icon" />
+            android:layout_width="149dp"
+            android:layout_height="155dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/avatar_icon" />
 
         <TextView
             android:id="@+id/user_name_surmname_txt"
@@ -39,8 +39,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="250dp"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:background="@color/colorAccent">
+        android:orientation="vertical">
 
 
         <TextView
@@ -48,52 +47,85 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Profile settings"
-            android:layout_marginStart="@dimen/fab_max_margin"
-            android:layout_marginTop="@dimen/fab_max_margin"
+            android:layout_marginStart="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/fab_margin"
             android:textSize="20sp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:background="@color/colorPrimaryDark"/>
 
         <TextView
             android:id="@+id/statement_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="My statement"
-            android:layout_marginStart="@dimen/fab_max_margin"
+            android:layout_marginStart="@dimen/fab_margin"
             android:layout_marginTop="@dimen/fab_margin"
             android:textSize="20sp"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimary" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:background="@color/colorPrimaryDark"/>
 
         <TextView
             android:id="@+id/history_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="History"
-            android:layout_marginStart="@dimen/fab_max_margin"
+            android:layout_marginStart="@dimen/fab_margin"
             android:layout_marginTop="@dimen/fab_margin"
             android:textSize="20sp"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimary" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:background="@color/colorPrimaryDark"/>
 
         <TextView
             android:id="@+id/notification_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Notification"
-            android:layout_marginStart="@dimen/fab_max_margin"
+            android:layout_marginStart="@dimen/fab_margin"
             android:layout_marginTop="@dimen/fab_margin"
             android:textSize="20sp"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimary" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:background="@color/colorPrimaryDark"/>
 
         <TextView
             android:id="@+id/logout_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Log Out"
-            android:layout_marginStart="@dimen/fab_max_margin"
+            android:layout_marginStart="@dimen/fab_margin"
             android:layout_marginTop="@dimen/fab_margin"
             android:textSize="20sp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:elevation="25dp"/>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:background="@color/colorPrimaryDark"/>
 
 
 
