--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -5,10 +5,22 @@
     android:layout_height="match_parent"
 >
 
-    <ImageView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/image_view"/>
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        >
+
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/appbar_padding_top"
+            android:id="@+id/image_view"/>
+
+    </android.support.v7.widget.CardView>
+
+
 
 
 
