--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#F9AA33</color>
     <color name="colorAccent">#344955</color>
     <color name="texthint">#7E99A7</color>
-    <color name="t">#40000000</color>
+    <color name="t">#9C9D9E</color>
 </resources>
