--- a/app/src/main/res/layout/fav_rv.xml
+++ b/app/src/main/res/layout/fav_rv.xml
@@ -15,7 +15,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/colorAccent"
-           >
+            android:layout_margin="@dimen/appbar_padding_top"
+            >
 
             <ImageView
                 android:id="@+id/fav_img"
@@ -80,7 +81,7 @@
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="District"
+                    android:text="Address"
                     android:textColor="@color/cardview_light_background" />
 
                 <TextView
@@ -102,7 +103,7 @@
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="8dp"
                 android:orientation="vertical">
 
                 <TextView
