--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -18,6 +18,7 @@
         android:id="@+id/image_for_list"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:background="@drawable/colapse"
  />
 </android.support.v7.widget.CardView>
 
